syntax = "proto2";
import "types.proto";
package bs.property;
option go_package ="/property";

enum CMDID_Property {
	IDQueryPropertyReq			= 1;			//查询财富
	IDQueryPropertyRsp			= 2;			//查询财富
};

message QueryPropertyReq{
	optional uint64   	user_id = 1;         	//用户ID
}

message QueryPropertyRsp{
	optional uint64   				user_id = 1;         	//用户ID
	repeated types.PropItem 		user_props = 2;			//用户道具
	optional types.ErrorInfo		err_info = 99;
}